# cheetah-learning

./: .gitignore  LICENSE
project/: CMakeLists.txt
project/include/FSM/: ControlFSMData.h  FSMController.h  FSMState.h  FSMState_FixedStand.h  FSMState_Passive.h  FSMState_Trot.h
project/include/Gait/: FootTrajectory.h  WaveGenerator.h
project/include/common/: enumClass.h  mathTypes.h  robotConfig.h
project/include/control/: LegController.h
project/include/interface/: IOInterface.h  IOSDK.h
project/include/message/: LowlevelCmd.h  LowlevelState.h
project/include/unitree_actuator_sdk/unitreeMotor/: unitreeMotor.h
project/src/: main.cpp
project/src/FSM/: FSMController.cpp  FSMState.cpp  FSMState_FixedStand.cpp  FSMState_Passive.cpp  FSMState_Trot.cpp
project/src/Gait/: FootTrajectory.cpp  WaveGenerator.cpp
project/src/control/: LegController.cpp
project/src/interface/: IOSDK.cpp
